--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="intro_to_html/index.html" target="_blank">Intro to HTML</a></li>
         <li><a href="html5_intro_to_css/index.html" target="_blank">HTML5 Intro to CSS</a></li>
+        <li><a href="adv_css_tables/index.html" target="_blank">Advanced CSS and Tables</a></li>
     </ul>
     
 </body>
