--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="html5_intro_to_css/index.html" target="_blank">HTML5 Intro to CSS</a></li>
         <li><a href="adv_css_tables/index.html" target="_blank">Advanced CSS and Tables</a></li>
         <li><a href="responsive_web_design" target="_blank">Responsive Web Design</a></li>
+        <li><a href="final_project/index.html" target="_blank">Final Project</a></li>
     </ul>
     
 </body>
